# sqlite-performance

./: .gitignore  LICENSE  README.md  arkiv-requirements.md  arkiv.schema.sql  arkiv.schema.txt  benchmark_05x.out  commit_time_distribution.ipynb  commit_time_distribution_attrsplit.ipynb  commit_time_distribution_simple_eav.ipynb  demo.db  experiments.md  mendoza-dump.md  payload_size_distribution.ipynb  pyproject.toml  query_benchmark_analysis.ipynb  scenarios.md  scripts.md
.devcontainer/: devcontainer.json
locust/: dc_read_and_write.py  dc_read_only.py  dc_write_and_update.py  inc_write_only.py  read_only.py  write_only.py
op-geth-simulator/: .gitignore  README.md  README_GO.md  biome.json  block_processor.go  block_replicator.go  cli.go  go.mod  go.sum  logger.go  main.go  package.json  process_log_to_csv.sh  query.go  queue.go  server.go  types.go
op-geth-simulator/src/: block-processor.ts  block-replicator-fast.ts  block-replicator.ts  cli.ts  db.ts  index.ts  logger.ts  queue.ts  test.ts  types.ts
src/db/: 01_benchmark_indexes_inmemory.py  02_benchmark_indexes_file_batch10k.py  03_benchmark_indexes_file_batch500.py  03b_benchmark_indexes_file_batch500_individual.py  04_benchmark_insert_modes.py  05_benchmark_arkiv_schema.py  06_benchmark_arkiv_schema_simple.py  07_benchmark_cache_size.py  07_benchmark_memory.py  08_benchmark_sampled_blocks.py  09_benchmark_sampled_blocks.py  10_benchmark_sampled_blocks_simple_eav.py  __init__.py  append_dc_data.py  eva.py  generate_dc_seed.py  inspect_dc_db.py  query_dc_benchmark.py
tests/: __init__.py  test_eva.py
