[project]
name = "sqlite-performance"
version = "0.1.0"
description = "SQLite performance testing and benchmarking"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "locust>=2.42.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pip>=25.3",
    "seaborn>=0.13.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/db"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.coverage.run]
source = ["src"]
